tree-button overflow fix

--- a/mod/deckorate_core/assets/style/answers.scss
+++ b/mod/deckorate_core/assets/style/answers.scss
@@ -53,6 +53,7 @@
 .answer-result-items {
   .tree-button {
     padding: 0;
+    overflow: auto;
     > div {
       margin-left: 1rem;
     }
